@@ -1,5 +1,8 @@
 2010-08-09 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/core/na-icontext.c (is_candidate_for_folders):
+	Fix incorrect and optimize handling of folder conditions.
+
 	* src/core/na-icontext.c (is_candidate_for_schemes):
 	Fix incorrect and optimize handling of scheme conditions.
 
